--- a/index.html
+++ b/index.html
@@ -130,6 +130,24 @@
         </div>
     </section>
 
+    <section class="about d-lg-flex justify-content-center align-items-center" id="about">
+      <div class="container">
+        <h1><span class="mr-2">Projects:</span></h1>
+        <div class="about-text">
+          <h3><a href="https://www.github.com/egomes001/Project-7">Mon Vieux Grimoire</a></h3>
+          <p>"Mon Vieux Grimoire" is a project about a book review website for which i developed the backend. Using Express and NodeJS, the idea was to allow the user to create an account, be able to log in, create a book review... The difficulty was to secure the database by only allowing the right user to modify a book or delete it.</p>
+        </div>
+        <div class="about-text">
+          <h3><a href="https://www.github.com/egomes001/Project-6">Kasa</a></h3>
+          <p>Kasa is a static website displaying to the user multiple homestays. Each card is clickable and redirect to the homestay presentation page. Most of the work was essentially to dynamically create the homestays cards, presentations pages and to create a working Single Page Application using Create React App</p>
+        </div>
+        <div class="about-text">
+          <h3><a href="https://www.github.com/egomes001/Project-3">Sophie Bluel</a></h3>
+          <p>For this project, the idea was to design a showcase site for the architect Sophie Bluel. It was my first time working with an API and creating a dynamic website using Javascript.</p>
+        </div>
+      </div>
+  </section>
+
     <!-- FEATURES -->
     <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
         <div class="container">
@@ -155,7 +173,7 @@
                             </div>
                             <div class="timeline-info">
                                 <h3><span>UX Designer</span><small>Argolight</small></h3>
-                                <p>Worked on enhancing the user interface of a microscope software coded in Java</p>
+                                <p>Worked on enhancing the user interface of a microscope software coded in Java.</p>
                             </div>
                         </div>
                     </div>
@@ -181,7 +199,7 @@
                             </div>
                             <div class="timeline-info">
                                 <h3><span>Master Bioinformatics</span><small>Bordeaux University</small></h3>
-                                <p>Graduated a Masters degree in Bioinformatics, learning about programming, omics, OOP, visualization..</p>
+                                <p>Graduated a Masters degree in Bioinformatics, learning about programming, omics, OOP, visualization...</p>
                             </div>
                         </div>
                         
