--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div class="about-text">
           <h3><a href="https://www.github.com/egomes001/Project-6">Kasa</a></h3>
-          <p>Kasa is a static website displaying to the user multiple homestays. Each card is clickable and redirect to the homestay presentation page. Most of the work was essentially to dynamically create the homestays cards, presentations pages and to create a working Single Page Application using Create React App</p>
+          <p>Kasa is a static website displaying to the user multiple homestays. Each card is clickable and redirect to the homestay presentation page. Most of the work was essentially to dynamically create the homestays cards, presentations pages and to create a working Single Page Application using Create React App.</p>
         </div>
         <div class="about-text">
           <h3><a href="https://www.github.com/egomes001/Project-3">Sophie Bluel</a></h3>
