--- a/index.html
+++ b/index.html
@@ -136,14 +136,30 @@
         <div class="about-text">
           <h3><a href="https://www.github.com/egomes001/Project-7">Mon Vieux Grimoire</a></h3>
           <p>"Mon Vieux Grimoire" is a project about a book review website for which i developed the backend. Using Express and NodeJS, the idea was to allow the user to create an account, be able to log in, create a book review... The difficulty was to secure the database by only allowing the right user to modify a book or delete it.</p>
+          <div class="custom-btn-group mb-4">
+            <span class="custom-btn">Express</span>
+            <span class="custom-btn">NodeJS</span>
+            <span class="custom-btn">NoSQL</span>
+          </div>
         </div>
         <div class="about-text">
           <h3><a href="https://www.github.com/egomes001/Project-6">Kasa</a></h3>
           <p>Kasa is a static website displaying to the user multiple homestays. Each card is clickable and redirect to the homestay presentation page. Most of the work was essentially to dynamically create the homestays cards, presentations pages and to create a working Single Page Application using Create React App</p>
+          <div class="custom-btn-group mb-4">
+            <span class="custom-btn">React</span>
+            <span class="custom-btn">React Router</span>
+            <span class="custom-btn">Create React App</span>
+            <span class="custom-btn">Sass</span>
+          </div>
         </div>
         <div class="about-text">
           <h3><a href="https://www.github.com/egomes001/Project-3">Sophie Bluel</a></h3>
           <p>For this project, the idea was to design a showcase site for the architect Sophie Bluel. It was my first time working with an API and creating a dynamic website using Javascript.</p>
+          <div class="custom-btn-group mb-4">
+            <span class="custom-btn">JS</span>
+            <span class="custom-btn">HTML</span>
+            <span class="custom-btn">CSS</span>
+          </div>
         </div>
       </div>
   </section>
